# research

./: .gitignore  Arete.pptx  README.md  atr.puml  book.tex  intro.tex  mp.ipynb  path-planning.tex  pyproject.toml  references.bib  ssd.puml  tmp.txt
